--- a/package.json
+++ b/package.json
@@ -7,15 +7,27 @@
     "start": "webpack serve",
     "watch": "webpack -w",
     "build": "webpack --mode production",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest",
+    "lint:check": "eslint \"src/**/*.ts\"",
+    "lint:fix": "eslint \"src/**/*.ts\" --fix",
+    "lint": "npm run lint:fix",
+    "format:check": "prettier -c \"src/**/*.ts\"",
+    "format:fix": "prettier -w \"src/**/*.ts\"",
+    "format": "npm run format:fix"
   },
   "author": "arlechann",
   "license": "CC0-1.0",
   "devDependencies": {
+    "@types/jest": "^29.5.0",
+    "@types/react-test-renderer": "^18.0.0",
+    "@typescript-eslint/eslint-plugin": "^5.55.0",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "html-webpack-plugin": "^5.5.0",
+    "jest": "^29.5.0",
     "prettier": "^2.8.4",
+    "react-test-renderer": "^18.2.0",
+    "ts-jest": "^29.0.5",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.2",
     "webpack": "^5.76.2",
